[!] Fixed wrong spacing between product icons
git-svn-id: svn://svn.crtdev.local/repo/xlite/main@2706 194c3f1c-803d-db11-9c9e-000e0c8563f3

--- a/test/skins/drupal/en/products_list/products_list.css
+++ b/test/skins/drupal/en/products_list/products_list.css
@@ -113,25 +113,25 @@
 .list-body-grid-2-columns li.item
 {
   width: 47%;
-  margin-right: 3%;
+  margin-right: 2.9%;
 }
 
 .list-body-grid-3-columns li.item
 {
   width: 30%;
-  margin-right: 3%;
+  margin-right: 2.9%;
 }
 
 .list-body-grid-4-columns li.item
 {
   width: 23%;
-  margin-right: 2%;
+  margin-right: 1.9%;
 }
 
 .list-body-grid-5-columns li.item
 {
   width: 19%;
-  margin-right: 1%;
+  margin-right: 0.9%;
 }
 
 
